update deployement script in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t syedrohaan/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run syedrohaan/docker-react npm run test -- --coverage
+  - docker run syedrohaan/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
